--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/index.js --ignore client",
-    "start": "cross-env NODE_ENV=production node src/index.js"
+    "dev": " nodemon src/index.js ",
+    "start": " node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "dotenv": "^16.1.3",
+    "dotenv": "^16.3.1",
     "nodemon": "^2.0.22"
   }
 }
