--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"babel src -d dist ",
+    "build":"babel src -d dist && babel src/components -d dist/components && babel src/pages -d dist/pages ",
     "dev": " nodemon src/index.js ",
     "start": " node src/index.js"
   },
@@ -27,6 +27,12 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@babel/preset-env": "^7.18.6",
+    "ncp": "^2.0.0"
   }
 }
